# endara-relay

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: update-formula.py
src/: config.rs  js_sandbox.rs  jsonrpc.rs  lib.rs  main.rs  management.rs  oauth.rs  prefix.rs  registry.rs  server.rs  shell_env.rs  token_manager.rs  token_security.rs  watcher.rs
src/adapter/: http.rs  mod.rs  oauth.rs  server_name.rs  sse.rs  stdio.rs
src/adapter/oauth/: heartbeat.rs  metrics.rs  mod.rs  state.rs
src/oauth/: dcr.rs  discovery.rs  mod.rs
tests/: batch_integration.rs  catalog_validation_integration.rs  crash_recovery_integration.rs  handshake_integration.rs  harness_smoke.rs  health_endpoint_integration.rs  hot_reload_integration.rs  http_adapter_integration.rs  http_security_integration.rs  js_execution_integration.rs  management_api_integration.rs  mcp_server_integration.rs  meta_tools_integration.rs  multi_endpoint_integration.rs  multi_server_integration.rs  notification_integration.rs  oauth_integration.rs  server_info_name.rs  session_integration.rs  sse_adapter_integration.rs  sse_streaming_integration.rs  stdio_integration.rs  stdio_real_server_integration.rs  tool_call_integration.rs  tool_listing_integration.rs  tools_cache_e2e_integration.rs
tests/common/: config.rs  harness.rs  mcp_client.rs  mock_mcp_server.rs  mock_oauth_server.rs  mod.rs  toolchain.rs
tests/fixtures/: bad_server.rs  crash_server.rs  echo_mcp_server.sh  everything-only.toml  everything-plus-filesystem.toml  http_server.rs  minimal.toml  multi_tool_server.rs  slow_server.rs  sse_server.rs  swap_notify_server.rs  three-server.toml
